Fix some text contrast settings, will require more review

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,6 +1,6 @@
 
 :root {
-  --text-color: var(--mantine-color-dark-2);
+  --text-color: var(--mantine-color-dark-0);
   --_text-line-height: 1.75;
 }
 
